--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
   <p id="login"> <!-- id para poder acceder a los elementos de login usando jquery -->
     You are not logged in.
     <button>Log in</button> <!-- boton para iniciar sesion -->
+    <label>Write your identity provider:</label>
+  <input type="text" id="provider" value = 'https://solid.community'>
   </p>
   <p id="logout"> <!-- id para poder acceder a los elementos de logout usando jquery -->
     You are logged in as <span id="user"></span>. 
@@ -29,7 +31,7 @@
     </dd>
   </dl>
   <script src="scripts/jquery.js"></script>
-  <script src="scripts/solid-auth-client.bundle.js"></script>
+  <script src="https://solid.github.io/solid-auth-client/dist/solid-auth-client.bundle.js"></script>
   <script src="scripts/rdflib.min.js"></script>
   <script src="scripts/main.js"></script>
 </body>
